added bun fun to the package.json and a bun.lockb file, install bun and run 'bun i' to install deps for prject, and use 'bun run devBun' to run project with bun

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "devBun": "bunx --bun vite",
     "build": "vite build",
     "preview": "vite preview"
   },
